--- a/ChachaT/Base.lproj/Main.storyboard
+++ b/ChachaT/Base.lproj/Main.storyboard
@@ -682,20 +682,20 @@
                                 </variation>
                             </view>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ils-DD-YlI">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="205"/>
+                                <rect key="frame" x="20" y="10" width="335" height="205"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="205" id="1Ca-K7-Q9d"/>
                                 </constraints>
-                                <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <color key="textColor" red="0.69803921570000005" green="0.69803921570000005" blue="0.69803921570000005" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="hNg-E2-IW9">
-                                <rect key="frame" x="0.0" y="265" width="375" height="334"/>
+                                <rect key="frame" x="20" y="225" width="335" height="364"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <color key="textColor" red="0.69803921570000005" green="0.69803921570000005" blue="0.69803921570000005" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -703,15 +703,15 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="h1c-kP-5ik" firstAttribute="top" secondItem="hNg-E2-IW9" secondAttribute="bottom" id="3es-W6-SF0"/>
-                            <constraint firstItem="hNg-E2-IW9" firstAttribute="top" secondItem="ils-DD-YlI" secondAttribute="bottom" constant="60" id="G5R-vX-2Pc"/>
-                            <constraint firstItem="hNg-E2-IW9" firstAttribute="leading" secondItem="Eas-hc-G61" secondAttribute="leading" id="WA3-Ap-NR8"/>
+                            <constraint firstItem="h1c-kP-5ik" firstAttribute="top" secondItem="hNg-E2-IW9" secondAttribute="bottom" constant="10" id="3es-W6-SF0"/>
+                            <constraint firstItem="hNg-E2-IW9" firstAttribute="top" secondItem="ils-DD-YlI" secondAttribute="bottom" constant="10" id="G5R-vX-2Pc"/>
+                            <constraint firstItem="hNg-E2-IW9" firstAttribute="leading" secondItem="Eas-hc-G61" secondAttribute="leading" constant="20" id="WA3-Ap-NR8"/>
                             <constraint firstItem="DXq-tO-8ln" firstAttribute="top" secondItem="h1c-kP-5ik" secondAttribute="bottom" id="Y4j-v3-4B7"/>
-                            <constraint firstItem="ils-DD-YlI" firstAttribute="top" secondItem="Eas-hc-G61" secondAttribute="top" id="eBc-85-loa"/>
-                            <constraint firstAttribute="trailing" secondItem="ils-DD-YlI" secondAttribute="trailing" id="rpl-Ee-G8J"/>
-                            <constraint firstAttribute="trailing" secondItem="hNg-E2-IW9" secondAttribute="trailing" id="uGm-Az-wEz"/>
+                            <constraint firstItem="ils-DD-YlI" firstAttribute="top" secondItem="Eas-hc-G61" secondAttribute="top" constant="10" id="eBc-85-loa"/>
+                            <constraint firstAttribute="trailing" secondItem="ils-DD-YlI" secondAttribute="trailing" constant="20" id="rpl-Ee-G8J"/>
+                            <constraint firstAttribute="trailing" secondItem="hNg-E2-IW9" secondAttribute="trailing" constant="20" id="uGm-Az-wEz"/>
                             <constraint firstAttribute="trailing" secondItem="h1c-kP-5ik" secondAttribute="trailing" id="ud7-7L-e8i"/>
-                            <constraint firstItem="ils-DD-YlI" firstAttribute="leading" secondItem="Eas-hc-G61" secondAttribute="leading" id="yEi-nh-ISG"/>
+                            <constraint firstItem="ils-DD-YlI" firstAttribute="leading" secondItem="Eas-hc-G61" secondAttribute="leading" constant="20" id="yEi-nh-ISG"/>
                             <constraint firstItem="h1c-kP-5ik" firstAttribute="leading" secondItem="Eas-hc-G61" secondAttribute="leading" id="yXT-UC-iae"/>
                         </constraints>
                     </view>
